gc/lock/jni/jnilockXXX works too slow on 1-processor machine

XMLWordPrintable

    • gc
    • b26
    • x86
    • generic

        The tests:
        gc/lock/jni/jnilock002,3 and probably other could work too slow.

        The test shoud work 1 minute, however it works more then 20 minutes, sometimes more then 30 minutes.
        Test doesn't hang it always exit.

        The issue is reproducible on sfsparc003 only with fastdebug.
        It is not reproduced with -Xint.

        It is not reproduced always, sometimes all work fine and exit in 2 minutes.

              Assignee:
              Mikael Gerdin (Inactive)
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: