7014552: gc/lock/jni/jnilockXXX works too slow on 1-processor machine

Keep a counter of how many times we were stalled by the GC locker, add a diagnostic flag which sets the limit.

Reviewed-by: brutisso, ehelin, johnc